--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-navbar></app-navbar>
+
+<!-- <app-table [columns]="userColumns" [data]="users"></app-table> -->
+<div class="container mt4 custom-container">
+    <router-outlet></router-outlet>
+</div>
