--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -49,7 +49,13 @@
                     <ul class="dropdown-menu">
                         @for (nestedItem of dropdown.nestedItems; track nestedItem) {
                         <li>
-                            <a class="dropdown-item" href="#">{{ nestedItem }}</a>
+                            <a
+                                class="dropdown-item"
+                                [routerLink]="[nestedItem.path]"
+                                routerLinkActive="router-link-active"
+                            >
+                                {{ nestedItem.name }}
+                            </a>
                             <!-- <hr class="dropdown-divider" /> -->
                         </li>
                         }
