payment method details fetched from backend

--- a/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
+++ b/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
@@ -1,3 +1,4 @@
-{{ paymentMethod()?.id }}
-<br>
-{{ paymentMethod()?.name }}
+<p>{{ paymentMethod()?.id }}</p>
+<p>{{ paymentMethod()?.metodName }}</p>
+
+
