--- a/src/app/payments/payment-methods/payment-methods.component.html
+++ b/src/app/payments/payment-methods/payment-methods.component.html
@@ -1,6 +1,14 @@
 <div class="container mt-4">
     <h2>Payment Methods</h2>
     <button class="btn btn-primary mt-3" (click)="addPaymentMethod()">Add New Method</button>
+    @if (isFetching() && !error()) {
+    <p>Loading ...</p>
+    <p class="spinner-border spinner-border-sm"></p>
+
+    } @if (error()) {
+    <p>{{ error() }}</p>
+    }
+
     <ag-grid-angular
         [rowData]="paymentMethods()"
         [columnDefs]="colDefs"
