--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" dir="rtl">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sales Management</a>
+        <a class="navbar-brand" href="#">مدیریت فروش</a>
         <button
             class="navbar-toggler"
             type="button"
@@ -13,7 +13,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -68,7 +68,7 @@
             </ul>
             <form class="d-flex" role="search">
                 <input
-                    class="form-control me-2"
+                    class="form-control ms-2"
                     type="search"
                     placeholder="Search"
                     aria-label="Search"
