--- a/src/app/payments/payment-methods/new-payment-method/new-payment-method.component.html
+++ b/src/app/payments/payment-methods/new-payment-method/new-payment-method.component.html
@@ -1,6 +1,15 @@
-<form [formGroup]="newPaymentMethodForm">
-    <div class="mb-12">
-        <label for="methodName" class="form-label">method name</label>
-        <input type="text" class="form-control" id="methodName" formControlName="methodName" />
+<form [formGroup]="newPaymentMethodForm" (ngSubmit)="onSave()" dir="rtl">
+    <div class="mb-3 row">
+        <label for="methodName" class="col-sm-2 col-form-label text-end">روش پرداخت</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="methodName" formControlName="methodName" />
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <div class="col-sm-10 offset-sm-2">
+            <button class="btn btn-primary" type="submit" [disabled]="newPaymentMethodForm.invalid">
+                ذخیره
+            </button>
+        </div>
     </div>
 </form>
