--- a/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
+++ b/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
@@ -1,16 +1,24 @@
-<form [formGroup]="paymentMethodForm" (ngSubmit)="onSubmit()">
-    <div class="mb-12">
-        <label class="form-label" for="id">Id</label>
-        <input class="form-control" id="id" type="text" formControlName="id" />
+<form [formGroup]="paymentMethodForm" (ngSubmit)="onSubmit()" dir="rtl">
+    <div class="mb-3 row">
+        <label class="col-sm-2 col-form-label text-end" for="id">آیدی</label>
+        <div class="col-sm-10">
+            <input class="form-control" id="id" type="text" formControlName="id" />
+        </div>
     </div>
 
-    <div class="mb-3">
-        <label class="form-label" for="methodName">methodName</label>
-        <input class="form-control" id="methodName" formControlName="metodName" />
+    <div class="mb-3 row">
+        <label class="col-sm-2 col-form-label text-end" for="methodName">روش پرداخت</label>
+        <div class="col-sm-10">
+            <input class="form-control" id="methodName" formControlName="metodName" />
+        </div>
     </div>
-    @if (isEditing) {
-    <button class="btn btn-primary" type="submit" (click)="onSubmit()">ذخیره</button>
-    } @else if (!isEditing) {
-    <button class="btn btn-secondary" type="button" (click)="onEditing()">ویرایش</button>
-    }
+    <div class="mb-3-row">
+        <div class="col-sm-10 offset-sm-2">
+            @if (isEditing) {
+            <button class="btn btn-success" type="submit" (click)="onSubmit()">ذخیره</button>
+            } @else if (!isEditing) {
+            <button class="btn btn-primary" type="button" (click)="onEditing()">ویرایش</button>
+            }
+        </div>
+    </div>
 </form>
