--- a/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
+++ b/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
@@ -18,6 +18,7 @@
             <button class="btn btn-success" type="submit" (click)="onSubmit()">ذخیره</button>
             } @else if (!isEditing) {
             <button class="btn btn-primary" type="button" (click)="onEditing()">ویرایش</button>
+            <button class="btn btn-danger" type="button" (click)="onDelete()">حذف</button>
             }
         </div>
     </div>
