payment status detail logged to console

--- a/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
+++ b/src/app/payments/payment-methods/payment-method-details/payment-method-details.component.html
@@ -9,7 +9,7 @@
     <div class="mb-3 row">
         <label class="col-sm-2 col-form-label text-end" for="methodName">روش پرداخت</label>
         <div class="col-sm-10">
-            <input class="form-control" id="methodName" formControlName="metodName" />
+            <input class="form-control" id="methodName" formControlName="methodName" />
         </div>
     </div>
     <div class="mb-3-row">
