--- a/src/app/payments/payment-statuses/payment-statuses.component.html
+++ b/src/app/payments/payment-statuses/payment-statuses.component.html
@@ -1,6 +1,6 @@
-<div class="container mt-4">
-    <h2>Payment Methods</h2>
-    <!-- <button type="button" class="btn btn-primary mt-3" (click)="onClicklAddBtn()">➕</button> -->
+<div class="container mt-4" dir="rtl">
+    <h2 dir="rtl">وضعیت های پرداخت</h2>
+    <button type="button" class="btn btn-primary mt-3" (click)="onClickAddBtn()">➕</button>
     @if (isFetching() && !error()) {
     <p>Loading ...</p>
     <p class="spinner-border spinner-border-sm"></p>
