--- a/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
+++ b/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
@@ -23,3 +23,9 @@
         </div>
     </div>
 </form>
+
+<h2>TEST TEST TEST ! ! !</h2>
+
+<app-entity-form [fields]="field$ | async"></app-entity-form>
+<!-- <app-entity-form [fields]="fieldsSignal()"></app-entity-form> -->
+
