implemented form child component

--- a/src/app/shared/components/entity-form-field/entity-form-field.component.html
+++ b/src/app/shared/components/entity-form-field/entity-form-field.component.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    @if (!isValid) {
+    @if (!isValid && (form.touched || form.dirty)) {
     <div class="errorMessage">{{ field.label }} is required!</div>
     }
 </div>
