--- a/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
+++ b/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
@@ -1,31 +1,7 @@
-<form [formGroup]="paymentStatusForm" dir="rtl">
-    <div class="mb-3 row">
-        <label class="col-sm-2 col-form-label text-end" for="id">آیدی</label>
-        <div class="col-sm-10">
-            <input class="form-control" id="id" type="text" formControlName="id" />
-        </div>
-    </div>
-
-    <div class="mb-3 row">
-        <label class="col-sm-2 col-form-label text-end" for="statusName">وضعیت پرداخت</label>
-        <div class="col-sm-10">
-            <input class="form-control" id="statusName" formControlName="statusName" />
-        </div>
-    </div>
-    <div class="mb-3-row">
-        <div class="col-sm-10 offset-sm-2">
-            @if (isEditing) {
-            <button class="btn btn-success" type="submit" (click)="onSubmit()">ذخیره</button>
-            } @else if (!isEditing) {
-            <button class="btn btn-primary" type="button" (click)="onEditing()">ویرایش</button>
-            <button class="btn btn-danger" type="button" (click)="onDelete()">حذف</button>
-            }
-        </div>
-    </div>
-</form>
-
-<h2>TEST TEST TEST ! ! !</h2>
-
-<app-entity-form [fields]="field$ | async"></app-entity-form>
-<!-- <app-entity-form [fields]="fieldsSignal()"></app-entity-form> -->
-
+<app-entity-form
+    [fields]="fields"
+    [form]="entityForm"
+    [isEditingSignal]="isEditingSignal"
+    (submitEvent)="onSubmit()"
+    (deleteEvent)="onDelete()"
+></app-entity-form>
