--- a/src/app/shared/components/entity-form/entity-form.component.html
+++ b/src/app/shared/components/entity-form/entity-form.component.html
@@ -4,12 +4,14 @@
         <app-entity-form-field [field]="field" [form]="form"></app-entity-form-field>
     </div>
     }
-    <div class="form-row">
-        <button class="btn btn-success" type="submit" [disabled]="!form.valid">Save</button>
+    <div class="mb-3-row">
+        <div class="col-sm-10 offset-sm-2">
+            @if (isEditingSignal()) {
+            <button class="btn btn-success" type="submit">ذخیره</button>
+            } @else if (!isEditingSignal()) {
+            <button class="btn btn-primary" type="button" (click)="onEditing()">ویرایش</button>
+            <button class="btn btn-danger" type="button" (click)="onDelete()">حذف</button>
+            }
+        </div>
     </div>
 </form>
-@if (payLoad) {
-<div class="form-row">
-    <strong>Saved the following values</strong>
-</div>
-}
