implemented EntityDetailsComponent base class into PaymentStatusDetailsComponent

--- a/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
+++ b/src/app/payments/payment-statuses/payment-status-details/payment-status-details.component.html
@@ -1,6 +1,6 @@
 <app-entity-form
     [fields]="fields"
-    [form]="entityForm"
+    [form]="form"
     [isEditingSignal]="isEditingSignal"
     (submitEvent)="onSubmit()"
     (deleteEvent)="onDelete()"
